--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,7 @@ dependencies {
 
     implementation 'com.android.support:multidex:1.0.3'
 
+    implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
