--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,10 @@ dependencies {
 
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
 
+    implementation "org.jetbrains.anko:anko-commons:0.10.7"
+
+    implementation 'org.koin:koin-android:1.0.1'
+    implementation 'org.koin:koin-android-viewmodel:1.0.1'
+
 }
 apply plugin: 'com.google.gms.google-services'
